--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,26 +1,26 @@
 .side-bar
-  .user-name
-    .top-items
-      .name
+  .side-bar__user-name
+    .side-bar__user-name__top-items
+      .side-bar__user-name__top-items__name
         ああああ
-      .icons
+      .side-bar__user-name__top-items__icons
         = link_to "#" do
           = icon('far', 'edit', class: 'edit')
         = link_to "#" do
           = icon('fas', 'cog', class: 'cog')
-  .group-list
-    .group-box
-      .group-name
+  .side-bar__group-list
+    .side-bar__group-list__group-box
+      .side-bar__group-list__group-box__group-name
         グループ名
-      .group-last-message
+      .side-bar__group-list__group-box__group-last-message
         まだメッセージはありません
-    .group-box
-      .group-name
+    .side-bar__group-list__group-box
+      .side-bar__group-list__group-box__group-name
         グループ名
-      .group-last-message
+      .side-bar__group-list__group-box__group-last-message
         まだメッセージはありません
-    .group-box
-      .group-name
+    .side-bar__group-list__group-box
+      .side-bar__group-list__group-box__group-name
         グループ名
-      .group-last-message
+      .side-bar__group-list__group-box__group-last-message
         まだメッセージはありません
