--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,9 +1,9 @@
 .side-bar
   .user-name
     .top-items
-      .name
+      .top-items__name
         ああああ
-      .icons
+      .top-items__icons
         = link_to "#" do
           = icon('far', 'edit', class: 'edit')
         = link_to "#" do
