--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -22,12 +22,12 @@
 }
 //まずside_barのSCSS
 .side-bar {
-  &__user-name{
+  .user-name{
     @include display-center;
     background-color: #253141;
     height: 100px;
     width: 300px;
-    &__top-items{
+    .top-items{
       background-color: #253141;
       height: 20px;
       width: 260px;
@@ -47,21 +47,21 @@
       }
     }
   }
-  &__group-list{
+  .group-list{
     background-color: #2f3e51;
     height: calc(100vh - 100px);
     width: 300px;
-    &__group-box{
-      &__group-name{
-        background-color:#2f3e51;
-        height: 40px;
-        width: 260px;
-        padding: 20px 0 5px 0;
-        margin:  0 auto;
-        font-size: 15px;
-        color: #ffffff;
+    .group-box{
+      .group-name{
+      background-color:#2f3e51;
+      height: 40px;
+      width: 260px;
+      padding: 20px 0 5px 0;
+      margin:  0 auto;
+      font-size: 15px;
+      color: #ffffff;
       }
-      &__group-last-message{
+      .group-last-message{
         background-color: #2f3e51;
         height: 50px;
         width: 260px;
@@ -84,13 +84,13 @@
 
 //ここからchat_mainのSCSS
 .chat-main {
-  &__group-info {
+  .group-info {
     background-color: #ffffff;
     height: 100px;
     width: calc(100vw - 300px);
     display: flex;
     justify-content: space-between;
-    &__group-name {
+    .group-name {
       background-color: #ffffff;
       height: 20px;
       margin: 35px 0 15px 40px;
@@ -117,15 +117,15 @@
       }
     }
   }
-  &__message-list {
+  .message-list {
     background-color: #eeeeee;
     height: calc(100vh - 190px);
     width: calc(100vw - 300px);
     overflow-x: scroll;
-    &__message-box {
+    .message-box {
       background-color: #eeeeee;
       padding: 35px 40px 46px 40px;
-      &__message-info {
+      .message-info {
         background-color: #eeeeee;
         display: flex;
         font-size: 16px;
@@ -136,13 +136,13 @@
           padding: 0 0 0 10px;
         }
       }
-      &__message-text{
+      .message-text{
         padding: 12px 0 0 0;
         color: #434A54;
       }
     }
   }
-  &__message-footer {
+  .message-footer {
     background-color: #d2d2d2;
     height: 90px;
     width: calc(100vw - 300px);
