--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,9 +2,9 @@
   .user-name
     .top-items
       .top-items__name
-        ああああ
+        = current_user.name 
       .top-items__icons
-        = link_to "#" do
+        = link_to edit_user_path(current_user) do
           = icon('far', 'edit', class: 'edit')
         = link_to "#" do
           = icon('fas', 'cog', class: 'cog')
