--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,18 +9,10 @@
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class: 'cog')
   .group-list
-    .group-box
-      .group-name
-        グループ名
-      .group-last-message
-        まだメッセージはありません
-    .group-box
-      .group-name
-        グループ名
-      .group-last-message
-        まだメッセージはありません
-    .group-box
-      .group-name
-        グループ名
-      .group-last-message
-        まだメッセージはありません
+    - current_user.groups.each do |group|
+      .group-box
+        = link_to '#' do
+          .group-name
+            = group.group_name
+          .group-last-message
+            まだメッセージはありません
