--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,7 +11,7 @@
   .group-list
     - current_user.groups.each do |group|
       .group-box
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .group-name
             = group.group_name
           .group-last-message
