--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -44,12 +44,10 @@
         あああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
 
   .message-footer
-    .message-footer__form
-      %form
-        %input{type: "text", class: "input_box", placeholder: "type a message"}
-          %label{class: "input-box__image"}
-            = icon('far', 'image', class: 'image')
-            %input{type: "file", class: "input-file"}
-    .message-footer__send-btn
-      =link_to "#" do
-        send
+    = form_with model: [@group, @message], html: {class:"Form"}, local: true do |f|
+      .message-footer__form
+        =f.text_field :message, class: "input_box", placeholder: "type a message"
+        = f.label :image, class: "input-box__image" do
+          = icon('far', 'image', class: 'image')
+          = f.file_field :image, class: "input-file"
+        = f.submit 'Send', class: "send-btn"
