show_last_messageメソッドをGroupモデルに定義

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,4 +15,7 @@
           .group-name
             = group.group_name
           .group-last-message
-            まだメッセージはありません
+            - if group.messages.present?
+              = group.messages.last
+            - else
+              まだメッセージはありません
