--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -6,4 +6,4 @@
         = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
         .message-text
           = message.message
-        = image_tag message.image.url, class: 'message__image' if message.image.present?
+        = image_tag message.image.url class: 'message__image' if message.image.present?
