--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,14 +4,14 @@
       .top-items__name
         = current_user.name 
       .top-items__icons
-        = link_to new_group_path(@group) do
+        = link_to new_group_path(@group),data: {"turbolinks" => false} do
           = icon('far', 'edit', class: 'edit')
-        = link_to edit_user_path(current_user) do
+        = link_to edit_user_path(current_user), data: {"turbolinks" => false} do
           = icon('fas', 'cog', class: 'cog')
   .group-list
     - current_user.groups.each do |group|
       .group-box
-        = link_to group_messages_path(group) do
+        = link_to group_messages_path(group),data: {"turbolinks" => false} do
           .group-name
             = group.group_name
           .group-last-message
