--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,3 +1,5 @@
+= javascript_include_tag 'autoReload'
+-# 個別にjavascriptsの中からjavascriptファイルを読み込む記述
 .wrapper
  = render "side_bar"
  = render "main_chat"
